crates/ruff/src/comments/snapshots/ruff__comments__shebang__tests__shebang_leading_space.snap
---
source: crates/ruff/src/comments/shebang.rs
expression: "ShebangDirective::try_extract(source)"
---
Some(
    ShebangDirective {
        offset: 4,
        contents: "/usr/bin/env python",
    },
)
