crates/ruff/src/comments/snapshots/ruff__comments__shebang__tests__shebang_match.snap
---
source: crates/ruff/src/comments/shebang.rs
expression: "ShebangDirective::try_extract(source)"
---
Some(
    ShebangDirective {
        offset: 2,
        contents: "/usr/bin/env python",
    },
)
